--- a/locales/en.json
+++ b/locales/en.json
@@ -2325,6 +2325,10 @@
                 "name": "Neighborhood",
                 "terms": "neighbourhood"
             },
+            "place/suburb": {
+                "name": "Borough",
+                "terms": "Boro,Quarter"
+            },
             "place/town": {
                 "name": "Town",
                 "terms": ""
